--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "lasted",
   "license": "ISC",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.30",
     "canvacord": "^5.4.8",
     "discord-xp": "^1.1.16",
     "discord.js": "^14.6.0",
